add favicon to html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="icon" type="img/ico" href="favicon.ico">
 	<title>Sameer Khoja</title>
 	<link href="style.css" rel="stylesheet">
 </head>
