--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="icon" type="img/ico" href="favicon.ico">
+	<link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <link rel="icon" type="image/png" href="favicon.png" />
 	<title>Sameer Khoja</title>
 	<link href="style.css" rel="stylesheet">
 </head>
