--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link rel="icon" type="image/x-icon" href="Favicon.ico" />
-  	<link rel="icon" type="image/png" href="favicon.png" />
+  	<link rel="icon" type="image/png" href="Favicon.png" />
 	<title>Sameer Khoja</title>
 	<link href="style.css" rel="stylesheet">
 </head>
