change description of interests

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="container">
 <h1>Hey, I'm <b>Sameer Khoja.</b></h1>
 <div class="bio">
-<p>I am a high school senior from Dallas, Texas. I plan to pursue Computer Science at Cornell in Fall 2016.<br><br>I'm currently working in Google's Quantum Artifical Intelligence Lab to develop an analog quantum computer. Check out our progress <a href="http://plus.google.com/+QuantumAILab">here.</a> <br><br>My interests include machine learning, web development, and iOS apps. In my spare time, I dance and try various coffee brews. </p>
+<p>I am a high school senior from Dallas, Texas. I plan to pursue Computer Science at Cornell in Fall 2016.<br><br>I'm currently working in Google's Quantum Artifical Intelligence Lab to develop an analog quantum computer. Check out our progress <a href="http://plus.google.com/+QuantumAILab">here.</a> <br><br>My interests include machine learning, full-stack web development, and creating iOS apps. In my spare time, I dance and try various coffee brews. </p>
 </div>
 
 <div class="links">
