--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<link rel="icon" type="image/x-icon" href="Favicon.ico" />
   	<link rel="icon" type="image/png" href="Favicon.png" />
-	<title>Sameer Khoja</title>
+	<title>Sameer Khoja: Full-Stack Web Developer and Open-Source Enthusiast</title>
 	<link href="style.css" rel="stylesheet">
 </head>
 <body>
