--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 </div>
 <p>Below are links to some projects and blog posts:</p>
 <ul>
+<li><a href="https://github.com/samkho10/appify">Appify: a Web-to-Native App Converter</a></li>
 <li><a href="http://medium.com/@sameerkhoja/thoughts-of-a-post-coffee-addict-7f3c6585f3a9">Thoughts of a Post-Coffee Addict</a></li>
 <li><a href="http://www.hackathon.io/53584">Spark: Crowdfunding for a Cause</a></li>
 <li><a href="Brittle2015.pdf">Brittleness and toughness of polymers and other materials</a></li>
