update blog link

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div class="links">
 <a href="mailto:sameerkhoja10@gmail.com">Email</a> |
 <a href="resume">Resume</a> |
-<a href="http://medium.com/@sameerkhoja">Blog</a> |
+<a href="http://khojasdo.tech">Blog</a> |
 <a href="http://www.linkedin.com/in/sameerkhoja">LinkedIn</a> |
 <a href="http://github.com/samkho10/">GitHub</a>
 </div>
