user scalable is now zero

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   	<link rel="icon" type="image/png" href="Favicon.png" />
 	<title>Sameer Khoja: Full-Stack Web Developer and Open-Source Enthusiast</title>
 	<link href="style.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 </head>
 <body>
 <div class="container">
