bold is not working out

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
 <div class="container">
-<h1>Hey, I'm <b>Sameer Khoja.</b></h1>
+<h1>Hey, I'm Sameer Khoja.</h1>
 <div class="bio">
 <p>I am a high school senior from Dallas, Texas. I plan to pursue Computer Science at Cornell in Fall 2016.<br><br>I'm currently researching with Google's Quantum Artifical Intelligence Lab to develop a quantum computer. Check out our progress <a href="http://plus.google.com/+QuantumAILab">here.</a> <br><br>My interests include data analytics, machine learning, and full-stack web development. In my spare time, I dance and drink tons of coffee. </p>
 </div>
