--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 <ul>
 <!-- <li><a href="https://github.com/samkho10/gittutor">GitTutor: A Platform for Learning Code through GitHub.</a></li> -->
 <li><a href="https://medium.com/@sameerkhoja/lessons-learned-as-chief-tinkering-officer-a216da4bcdd4#.vbpn8jiaw">Lessons Learned as a Chief Tinkering Officer</a></li>
+<li><a href="https://github.com/samkho10/claire">Claire: Your personal AI trend analyer.</a></li>
 <li><a href="https://github.com/samkho10/appify">Appify: a Web-to-Native App Converter</a></li>
 <li><a href="https://medium.com/@sameerkhoja/thoughts-of-a-post-coffee-addict-7f3c6585f3a9#.wvwrvhhk8">Thoughts of a Post-Coffee Addict</a></li>
 <li><a href="http://www.hackathon.io/53584">Spark: Crowdfunding for a Cause</a></li>
