--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 <p>Below are links to some projects and blog posts:</p>
 <ul>
 <!-- <li><a href="https://github.com/samkho10/gittutor">GitTutor: A Platform for Learning Code through GitHub.</a></li> -->
+<li><a href="https://github.com/samkho10/gitTrend">GitTrend: Learn from your favorite developers.</a></li>
 <li><a href="https://medium.com/@sameerkhoja/lessons-learned-as-chief-tinkering-officer-a216da4bcdd4#.vbpn8jiaw">Lessons Learned as a Chief Tinkering Officer</a></li>
 <li><a href="https://github.com/samkho10/claire">Claire: Your personal AI trend analyer.</a></li>
 <li><a href="https://github.com/samkho10/appify">Appify: a Web-to-Native App Converter</a></li>
