--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
 <p>Below are links to some projects and blog posts:</p>
 <ul>
 <!-- <li><a href="https://github.com/samkho10/gittutor">GitTutor: A Platform for Learning Code through GitHub.</a></li> -->
-<li><a href="https://github.com/samkho10/gitTrend">GitTrend: Learn from your favorite developers.</a></li>
+<li><a href="https://github.com/samkho10/gitTrend">GitTrend: Learn from your favorite developers (Node).</a></li>
 <li><a href="https://github.com/samkho10/simple-react-note-taker">Simple Node.js+React Note Taker</a></li>
 <li><a href="https://medium.com/@sameerkhoja/lessons-learned-as-chief-tinkering-officer-a216da4bcdd4#.vbpn8jiaw">Lessons Learned as a Chief Tinkering Officer</a></li>
-<li><a href="https://github.com/samkho10/claire">Claire: Your personal AI trend analyer.</a></li>
-<li><a href="https://github.com/samkho10/appify">Appify: a Web-to-Native App Converter</a></li>
+<li><a href="https://github.com/samkho10/claire">Claire: Your personal AI trend analyer (Naive Bayes + Node.js).</a></li>
+<li><a href="https://github.com/samkho10/appify">Appify: a Web-to-Native iOS Solution (Swift)</a></li>
 <li><a href="https://medium.com/@sameerkhoja/thoughts-of-a-post-coffee-addict-7f3c6585f3a9#.wvwrvhhk8">Thoughts of a Post-Coffee Addict</a></li>
-<li><a href="http://www.hackathon.io/53584">Spark: Crowdfunding for a Cause</a></li>
+<li><a href="http://www.hackathon.io/53584">Spark: Crowdfunding for a Cause (Swift)</a></li>
 <li><a href="Brittle2015.pdf">Brittleness and toughness of polymers and other materials</a></li>
-<li><a href="http://github.com/kunzmainali/LNT-iO	S">Leave No Trace: Rethink Consumption</a></li>
-<li><a href="http://www.hackathon.io/freezeray">FreezeRay: The World's First Offline Wallet</a></li>
-<li><a href="http://github.com/samkho10/PeePal">PeePal: Know When to Go</a></li>
+<li><a href="http://github.com/kunzmainali/LNT-iO	S">Leave No Trace: Rethink Consumption (Obj C)</a></li>
+<li><a href="http://www.hackathon.io/freezeray">FreezeRay: The World's First Offline Wallet (Ionic)</a></li>
+<li><a href="http://github.com/samkho10/PeePal">PeePal: Know When to Go (Ionic)</a></li>
 </ul>
 </div>
 <!-- Google Tag Manager -->
