--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<link rel="icon" type="image/x-icon" href="Favicon.ico" />
   <link rel="icon" type="image/png" href="Favicon.png" />
-	<title>Sameer Khoja: Full-Stack Web Developer and Open-Source Enthusiast</title>
+	<title>Sameer Khoja: Software Developer and Open-Source Enthusiast</title>
 	<link href="style.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:600,500,400,300' rel='stylesheet' type='text/css'>
