change up colors and update

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>Sameer Khoja: Software Developer and Open-Source Enthusiast</title>
 	<link href="style.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:600,500,400,300' rel='stylesheet' type='text/css'>
 
 		<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"> -->
@@ -13,33 +14,26 @@
 <body>
 
 <div class="container">
-<h1>Hey, I'm Sameer Khoja.</h1>
-<div class="bio">
-<p>I am a high school senior from Dallas, Texas. I plan to pursue Computer Science at Cornell in Fall 2016.<br><br>My interests include data analytics, machine learning, and full-stack web development. In my spare time, I dance and drink tons of coffee. </p>
-</div>
+	<h1>Sameer Khoja</h1>
+	<div class="links">
+		<a href="http://www.linkedin.com/in/sameerkhoja"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+		<a href="mailto:sk2327@cornell.edu"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+		<a href="http://github.com/samkho10/"><i class="fa fa-github" aria-hidden="true"></i></a>
+	</div>
 
-<div class="links">
-<a href="mailto:sk2327@cornell.edu">Email</a> |
-<a href="resume">Resume</a> |
-<a href="https://medium.com/@sameerkhoja">Blog</a> |
-<a href="http://www.linkedin.com/in/sameerkhoja">LinkedIn</a> |
-<a href="http://github.com/samkho10/">GitHub</a>
-</div>
-<p>Below are links to some projects and blog posts:</p>
-<ul>
-<!-- <li><a href="https://github.com/samkho10/gittutor">GitTutor: A Platform for Learning Code through GitHub.</a></li> -->
-<li><a href="https://github.com/samkho10/gitTrend">GitTrend: Learn from your favorite developers (Node).</a></li>
-<li><a href="https://github.com/samkho10/simple-react-note-taker">Simple Node.js+React Note Taker</a></li>
-<li><a href="https://medium.com/@sameerkhoja/lessons-learned-as-chief-tinkering-officer-a216da4bcdd4#.vbpn8jiaw">Lessons Learned as a Chief Tinkering Officer</a></li>
-<li><a href="https://github.com/samkho10/claire">Claire: Your personal AI trend analyer (Naive Bayes + Node.js).</a></li>
-<li><a href="https://github.com/samkho10/appify">Appify: a Web-to-Native iOS Solution (Swift)</a></li>
-<li><a href="https://medium.com/@sameerkhoja/thoughts-of-a-post-coffee-addict-7f3c6585f3a9#.wvwrvhhk8">Thoughts of a Post-Coffee Addict</a></li>
-<li><a href="http://www.hackathon.io/53584">Spark: Crowdfunding for a Cause (Swift)</a></li>
-<li><a href="Brittle2015.pdf">Brittleness and toughness of polymers and other materials</a></li>
-<li><a href="http://github.com/kunzmainali/LNT-iO	S">Leave No Trace: Rethink Consumption (Obj C)</a></li>
-<li><a href="http://www.hackathon.io/freezeray">FreezeRay: The World's First Offline Wallet (Ionic)</a></li>
-<li><a href="http://github.com/samkho10/PeePal">PeePal: Know When to Go (Ionic)</a></li>
-</ul>
+	<div class="bio">
+		<p>
+			Hi, I'm Sameer. I'm a sophomore studying Computer Science and Linguistics at Cornell. You can check out my latest portfolio <a href="http://portfolio.sameerkhoja.com">here</a> or resume <a href="resume">here</a>.
+		</p>
+	</div>
+
+	<p>Below are my tech blog posts, all hosted on <a href="https://medium.com/@sameerkhoja">Medium</a	>.</p>
+	<ul>
+	<!-- <li><a href="https://github.com/samkho10/gittutor">GitTutor: A Platform for Learning Code through GitHub.</a></li> -->
+		<li><a href="https://medium.com/@sameerkhoja/gittrend-discover-new-languages-from-github-followers-fc4fc3e4fb9d#.tf937qc3h">GitTrend: Discover new languages from GitHub followers.</a></li>
+		<li><a href="https://medium.com/@sameerkhoja/lessons-learned-as-chief-tinkering-officer-a216da4bcdd4#.vbpn8jiaw">Lessons Learned as a Chief Tinkering Officer</a></li>
+		<li><a href="https://medium.com/@sameerkhoja/thoughts-of-a-post-coffee-addict-7f3c6585f3a9#.wvwrvhhk8">Thoughts of a Post-Coffee Addict</a></li>
+	</ul>
 </div>
 <!-- Google Tag Manager -->
 <script>
