update blog posts

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 	</div>
 
 	<p>Below are my tech blog posts, all hosted on <a href="https://medium.com/@sameerkhoja">Medium</a	>.</p>
-	<ul>
+		<ul>
+			<li><a href="https://medium.com/@sameerkhoja/medibot-my-pennapps-xiv-experience-99909e220033#.jivenw7eh">MediBot: My PennApps XIV Experience</a></li>
 	<!-- <li><a href="https://github.com/samkho10/gittutor">GitTutor: A Platform for Learning Code through GitHub.</a></li> -->
 		<li><a href="https://medium.com/@sameerkhoja/gittrend-discover-new-languages-from-github-followers-fc4fc3e4fb9d#.tf937qc3h">GitTrend: Discover new languages from GitHub followers.</a></li>
 		<li><a href="https://medium.com/@sameerkhoja/lessons-learned-as-chief-tinkering-officer-a216da4bcdd4#.vbpn8jiaw">Lessons Learned as a Chief Tinkering Officer</a></li>
