no more operations

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 	<div class="bio">
 		<p>
-			Hi, I'm Sameer. I'm a sophomore studying Computer Science and Operations Research at Cornell. You can check out my latest portfolio <a href="http://portfolio.sameerkhoja.com">here</a> or resume <a href="resume">here</a>.
+			Hi, I'm Sameer. I'm a sophomore studying Computer Science at Cornell. You can check out my latest portfolio <a href="http://portfolio.sameerkhoja.com">here</a> or resume <a href="resume">here</a>.
 		</p>
 	</div>
 
