updated links for new github username

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<div class="links">
 		<a href="http://www.linkedin.com/in/sameerkhoja"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
 		<a href="mailto:sk2327@cornell.edu"><i class="fa fa-envelope" aria-hidden="true"></i></a>
-		<a href="http://github.com/samkho10/"><i class="fa fa-github" aria-hidden="true"></i></a>
+		<a href="http://github.com/sameerkhoja/"><i class="fa fa-github" aria-hidden="true"></i></a>
 	</div>
 
 	<div class="bio">
@@ -30,7 +30,7 @@
 	<p>Below are my tech blog posts, all hosted on <a href="https://medium.com/@sameerkhoja">Medium</a	>.</p>
 		<ul>
 			<li><a href="https://medium.com/@sameerkhoja/medibot-my-pennapps-xiv-experience-99909e220033#.jivenw7eh">MediBot: My PennApps XIV Experience</a></li>
-	<!-- <li><a href="https://github.com/samkho10/gittutor">GitTutor: A Platform for Learning Code through GitHub.</a></li> -->
+	<!-- <li><a href="https://github.com/sameerkhoja/gittutor">GitTutor: A Platform for Learning Code through GitHub.</a></li> -->
 		<li><a href="https://medium.com/@sameerkhoja/gittrend-discover-new-languages-from-github-followers-fc4fc3e4fb9d#.tf937qc3h">GitTrend: Discover new languages from GitHub followers.</a></li>
 		<li><a href="https://medium.com/@sameerkhoja/lessons-learned-as-chief-tinkering-officer-a216da4bcdd4#.vbpn8jiaw">Lessons Learned as a Chief Tinkering Officer</a></li>
 		<li><a href="https://medium.com/@sameerkhoja/thoughts-of-a-post-coffee-addict-7f3c6585f3a9#.wvwrvhhk8">Thoughts of a Post-Coffee Addict</a></li>
