--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<link rel="icon" type="image/x-icon" href="Favicon.ico" />
   <link rel="icon" type="image/png" href="Favicon.png" />
-	<title>Sameer Khoja: Software Developer and Open-Source Enthusiast</title>
+	<title>Sameer Khoja: Software Developer and Open-Source Enthusiast Test</title>
 	<link href="style.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
