--- a/resume/index.html
+++ b/resume/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=Sameer\ Khoja\ Resume.pdf" />
+<meta http-equiv="refresh" content="0; url=Sameer_Khoja_Resume.pdf" />
