--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 	<div class="bio">
 		<p>
-			Hi, I'm Sameer. I'm a senior studying Computer Science at Cornell, and an incoming Software Engineer Intern at Google. You can check out my latest resume <a href="resume">here</a>.
+			Hi, I'm Sameer. I'm a Cornell Grad, and a Software Engineer Intern at Google. You can check out my latest resume <a href="resume">here</a>.
 		</p>
 	</div>
 
