--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 	<div class="bio">
 		<p>
-			Hi, I'm Sameer. I'm a Cornell grad, and a Software Engineer Intern at Google. Previous Software Engineer Intern at LinkedIn. You can check out my latest resume <a href="resume">here</a>.
+			Hi, I'm Sameer. I'm a Cornell grad, and previous engineer at Google and LinkedIn. You can check out my latest resume <a href="resume">here</a>.
 		</p>
 	</div>
 
