--- a/reads/index.html
+++ b/reads/index.html
@@ -4,7 +4,7 @@
 	<link rel="icon" type="image/x-icon" href="Favicon.ico" />
   <link rel="icon" type="image/png" href="Favicon.png" />
 	<title>Sameer Khoja: Software Developer and Open-Source Enthusiast</title>
-	<link href="style.css" rel="stylesheet">
+	<link href="../style.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:600,500,400,300' rel='stylesheet' type='text/css'>
