--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="icon" type="image/x-icon" href="Favicon.ico" />
-  <link rel="icon" type="image/png" href="Favicon.png" />
+	<link rel="icon" type="image/x-icon" href="../Favicon.ico" />
+  <link rel="icon" type="image/png" href="../Favicon.png" />
 	<title>Sameer Khoja: Software Developer and Open-Source Enthusiast</title>
 	<link href="style.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:600,500,400,300' rel='stylesheet' type='text/css'>
-
-		<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"> -->
 </head>
 <body>
 
