--- a/reads/index.html
+++ b/reads/index.html
@@ -48,6 +48,29 @@ gives a glimpse into what was happening in the then-Jim Crow era, and made
 analogies to several real academies, primarily in Florida. Would definitely
 recommend this book as it provides a great window into Jim Crow-era society.</li>
   </ul>
+	<p>Steve Jobs</p>
+		<ul>
+			<li>This book by Walter Isaacson dives into the life and mind of Steve Jobs,
+from when he first met Steve Wozniak all the way until his final days.
+A very personal account of his life, and I would definitely recommend
+this to anyone as a source of true inspiration.</li>
+	</ul>
+	<p>Educated: A Memoir</p>
+		<ul>
+			<li>This book, based on a true story of Tara Westover, is about a young woman's
+search to Education and triumph over her family's poverty and lifetime
+of abuse. Tara provides a transparent yet powerful window into her life,
+and there is a lot to take away from the book from ambition to love. Would
+100% recommend this book!</li>
+	</ul>
+	<p>Insanely Simple: The Obsession That Drives Apple's Success</p>
+		<ul>
+			<li>This book by Ken Segall is more of a guide into how to bring simplicity
+into the workplace. It talks about Apple's heyday, and how he and several
+other Apple executives brought simplicity through a set of mantras that
+were instrumental in the success of the iPod, iPhone, and iPad. One of my
+most favorite reads, really insightful for anyone interested in technology!</li>
+	</ul>
 </div>
 <!-- Google Tag Manager -->
 <script>
