--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<a href="http://www.linkedin.com/in/sameerkhoja"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
 		<a href="mailto:sk2327@cornell.edu"><i class="fa fa-envelope" aria-hidden="true"></i></a>
 		<a href="http://github.com/sameerkhoja/"><i class="fa fa-github" aria-hidden="true"></i></a>
-		<a href="http://sameerkhoja.com/reads"><i class="fa fa-book" aria-hidden="true"></i></a>
+		<a href="http://sameerkhoja.com/bookshelf"><i class="fa fa-book" aria-hidden="true"></i></a>
 	</div>
 
 	<div class="bio">
