--- a/index.html
+++ b/index.html
@@ -5,46 +5,8 @@
   <link rel="icon" type="image/png" href="../Favicon.png" />
 	<title>Sameer Khoja: Software Developer and Open-Source Enthusiast</title>
 	<link href="style.css" rel="stylesheet">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
-	<link href='https://fonts.googleapis.com/css?family=Open+Sans:600,500,400,300' rel='stylesheet' type='text/css'>
+	<meta http-equiv = "refresh" content = "2; url = https://www.sameerkhoja.webflow.io" />
 </head>
 <body>
-
-<div class="container">
-	<h1>Sameer Khoja</h1>
-	<div class="links">
-		<a href="http://www.linkedin.com/in/sameerkhoja"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-		<a href="mailto:sk2327@cornell.edu"><i class="fa fa-envelope" aria-hidden="true"></i></a>
-		<a href="http://github.com/sameerkhoja/"><i class="fa fa-github" aria-hidden="true"></i></a>
-		<a href="http://sameerkhoja.com/bookshelf"><i class="fa fa-book" aria-hidden="true"></i></a>
-	</div>
-
-	<div class="bio">
-		<p>
-			Hi, I'm Sameer. I'm a Cornell grad, and previous engineer at Google and LinkedIn. You can check out my latest resume <a href="resume">here</a>.
-		</p>
-	</div>
-
-	<p>Below are my tech blog posts, all hosted on <a href="https://medium.com/@sameerkhoja">Medium</a	>.</p>
-		<ul>
-			<li><a target="_blank" href="https://medium.freecodecamp.org/an-interview-with-matt-loring-an-engineer-on-googles-nodejs-runtime-team-3de1adddffdd">An Interview with Matt Loring, an engineer on Google’s NodeJS Runtime team</a></li>
-			<li><a target="_blank" href="https://medium.com/@sameerkhoja/gittrend-discover-new-languages-from-github-followers-fc4fc3e4fb9d#.tf937qc3h">GitTrend: Discover new languages from GitHub followers.</a></li>
-			<li><a target="_blank" href="https://medium.com/@sameerkhoja/lessons-learned-as-chief-tinkering-officer-a216da4bcdd4#.vbpn8jiaw">Lessons Learned as a Chief Tinkering Officer</a></li>
-			<li><a target="_blank" href="https://medium.com/@sameerkhoja/thoughts-of-a-post-coffee-addict-7f3c6585f3a9#.wvwrvhhk8">Thoughts of a Post-Coffee Addict</a></li>
-	</ul>
-</div>
-<!-- Google Tag Manager -->
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-74232514-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
-<!-- End Google Tag Manager -->
 </body>
 </html>
