--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="icon" type="image/png" href="../Favicon.png" />
 	<title>Sameer Khoja: Software Developer and Open-Source Enthusiast</title>
 	<link href="style.css" rel="stylesheet">
-	<meta http-equiv = "refresh" content = "2; url = https://www.sameerkhoja.webflow.io" />
+	<meta http-equiv = "refresh" content = "2; url = https://sameerkhoja.webflow.io" />
 </head>
 <body>
 </body>
