--- a/index.html
+++ b/index.html
@@ -5,10 +5,63 @@
   <link rel="icon" type="image/png" href="../Favicon.png" />
 	<title>Sameer Khoja: Software Developer and Open-Source Enthusiast</title>
 	<link href="style.css" rel="stylesheet">
-	<script>
-				window.location='http://sameerkhoja.webflow.io'
-</script>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
+	<body class="body">
+		<div class="section">
+			<div class="columns w-row">
+				<div class="column w-col w-col-2"></div>
+				<div class="toplinks w-col w-col-5">
+					<h1 class="heading">
+						Sameer Khoja, Software Engineer at Google.
+						<br>
+						<br>
+						Previously, Software Engineer Intern at Google, LinkedIn, Intuit. Freelanced for various companies including Function of Beauty (YC W16), Fluid AI, Elympic. Currently based in Dallas, TX.
+					</h1>
+					<a href="mailto:sameerkhoja10@gmail.com?subject=Hello!" class="link-9 toplinks">Say Hello</a>
+					<a href="sameerkhoja.com/resume" target="_blank" class="link toplinks">Resume</a>
+					<a href="http://linkedin.com/in/sameerkhoja" target="_blank" class="link toplinks">LinkedIn</a>
+					<a href="http://twitter.com/sameerkhoja10" target="_blank" class="link-3 toplinks">Twitter</a>
+					<a href="http://github.com/sameerkhoja" target="_blank" class="link-4 toplinks">GitHub</a>
+				</div>
+				<div class="column-4 w-col w-col-3">
+					<img src="" alt="">
+					<!-- put pic -->
+				</div>
+				<div class="w-col w-col-2"></div>
+			</div>
+			<div class="w-row">
+				<div class="column-2 w-col w-col-11"></div>
+				<div class="w-col w-col-1"></div>
+			</div>
+			<div class="columns-2 w-row">
+				<div class="w-col w-col-2"></div>
+				<div class="w-col w-col-3">
+					<h4 class="heading-2">Currently</h4>
+					<p class="paragraph">Software Engineer, <a href="google.com" target="_blank" class="link-5">Google</a></p>
+					<h4 class="heading-3">In the Past</h4>
+					<p class="paragraph-2">
+						Software Engineer Intern, <a href="google.com" target="_blank" class="link-5">Google</a>
+						<br><br>
+						Software Engineer Intern, <a href="linkedin.com" target="_blank" class="link-5">LinkedIn</a>
+						<br><br>
+						Software Engineer Intern, <a href="intuit.com" target="_blank" class="link-5">Intuit</a>
+					</p>
+				</div>
+				<div class="w-col w-col-3">
+					<h4 class="heading-2">Bookshelf</h4>
+					<p class="paragraph">
+						American Spy
+						<br><br>
+						Who Owns the Future
+						<br><br>
+						The Lean
+					</p>
+				</div>
+
+			</div>
+		</div>
+	</body>
 </body>
 </html>
