--- a/bookshelf.html
+++ b/bookshelf.html
@@ -31,6 +31,11 @@
     <div class="w-col w-col-2"></div>
   </div>
   <ul class="list">
+
+
+    <li><a target="_blank" href="https://www.amazon.com/Fahrenheit-451-Ray-Bradbury/dp/1451673310/ref=sr_1_1?crid=ZWK6RNBZFAR9&keywords=farenheit+451&qid=1577903067&sprefix=paper%2Caps%2C181&sr=8-1">Farenheit 451</a</li>
+    <li><a target="_blank" href="https://www.amazon.com/You-Are-Badass%C2%AE-Doubting-Greatness/dp/0762447699/ref=sr_1_1?crid=ZWK6RNBZFAR9&keywords=you+are+a+badass&qid=1577903051&sprefix=paper%2Caps%2C181&sr=8-1">You Are a Badass</a</li>
+    <li><a target="_blank" href="https://www.amazon.com/Rich-Dad-Poor-Teach-Middle/dp/1612680194/ref=sr_1_1?crid=ZWK6RNBZFAR9&keywords=rich+dad+poor+dad&qid=1577902904&sprefix=paper%2Caps%2C181&sr=8-1">Rich Dad Poor Dad</a</li>
     <li><a target="_blank" href="https://www.google.com/aclk?sa=L&ai=DChcSEwiGse6nq-rlAhXCIK0GHdByCr4YABABGgJwdg&sig=AOD64_0-Jtq4XdcfICzshOgtj3a7FqZh5Q&ctype=5&q=&ved=0ahUKEwj79OOnq-rlAhUPGTQIHTi_C1EQww8INg&adurl=">David and Goliath</a</li>
     <li><a target="_blank" href="https://www.amazon.com/Blink-Power-Thinking-Without/dp/0316010669">Blink</a</li>
     <li><a target="_blank" href="https://www.amazon.com/Thinking-Fast-Slow-Daniel-Kahneman/dp/0374533555">Thinking, Fast and Slow</a</li>
