--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
     </div>
     <div class="column-3 w-col w-col-2">
       <h4>Writing</h4>
+      <div class="text-block">Software Engineering </div>
+      <p class="paragraph-3"><a target="_blank" href="https://medium.com/@sameerkhoja/how-to-break-into-software-engineering-f2ae74eecde4<br>‍</a></p>
       <div class="text-block">FreeCodeCamp </div>
       <p class="paragraph-3"><a target="_blank" href="https://medium.freecodecamp.org/an-interview-with-matt-loring-an-engineer-on-googles-nodejs-runtime-team-3de1adddffdd" class="link-7">An Interview with Matt Loring<br>‍</a></p>
       <div class="text-block">GitTrend</div>
