--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="columns w-row">
     <div class="column w-col w-col-2"></div>
     <div class="toplinks w-col w-col-5">
-      <h1 class="heading">Sameer Khoja, Software Engineer at Youtube.<br><br>Previously, Software Engineer Intern at Google, LinkedIn, Intuit. Freelanced for various companies including Function of Beauty (YC W16), Fluid AI, NewCraft. Currently based in Dallas, TX.</h1><a href="mailto:sameerkhoja10@gmail.com?subject=Hello!" class="link-9 toplinks">Say Hello</a><a href="http://sameerkhoja.com/resume" target="_blank" class="link toplinks">Resume</a><a href="http://linkedin.com/in/sameerkhoja" target="_blank" class="link toplinks">LinkedIn</a><a href="http://twitter.com/sameerkho10" target="_blank" class="link-3 toplinks">Twitter</a><a href="http://github.com/sameerkhoja" target="_blank" class="link-4 toplinks">GitHub</a></div>
+      <h1 class="heading">Sameer Khoja, Software Engineer at YouTube.<br><br>Previously, Software Engineer Intern at Google, LinkedIn, Intuit. Freelanced for various companies including Function of Beauty (YC W16), Fluid AI, NewCraft. Currently based in Dallas, TX.</h1><a href="mailto:sameerkhoja10@gmail.com?subject=Hello!" class="link-9 toplinks">Say Hello</a><a href="http://sameerkhoja.com/resume" target="_blank" class="link toplinks">Resume</a><a href="http://linkedin.com/in/sameerkhoja" target="_blank" class="link toplinks">LinkedIn</a><a href="http://twitter.com/sameerkho10" target="_blank" class="link-3 toplinks">Twitter</a><a href="http://github.com/sameerkhoja" target="_blank" class="link-4 toplinks">GitHub</a></div>
     <div class="column-4 w-col w-col-3"><img src="images/IMG_2098-removebg-preview.png" width="368" alt="" class="image"></div>
     <div class="w-col w-col-2"></div>
   </div>
