--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="w-col w-col-2"></div>
     <div class="w-col w-col-3">
       <h4 class="heading-2">Currently</h4>
-      <p class="paragraph">Software Engineer, <a href="http://google.com" target="_blank" class="link-5">Google</a></p>
+      <p class="paragraph">Software Engineer, <a href="http://youtube.com" target="_blank" class="link-5">YouTube</a></p>
       <h4 class="heading-3">In the Past</h4>
       <p class="paragraph-2">Software Engineer Intern, <a href="http://google.com" target="_blank" class="link-6">Google<br><br></a>Software Engineer Intern, <a href="http://linkedin.com" target="_blank" class="link-6">LinkedIn</a><a href="http://linkedin.com" target="_blank" class="link-6"><br><br></a>Software Engineer Intern, <a href="http://intuit.com" target="_blank" class="link-6">Intuit</a>‍</p>
     </div>
